[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/FrostbiteBossFight-dL0Z.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://font/Frostbite_64_main_menu.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/areas/Win_scene.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0.0313726, 0.313726, 0.0509804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win_text" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -105.0
margin_right = 105.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 2 )
text = "YOU WON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="renown_text" type="Label" parent="win_text"]
anchor_left = 0.5
anchor_top = 1.2
anchor_right = 0.5
anchor_bottom = 1.2
margin_left = -73.0
margin_top = -14.0
margin_right = 73.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0705882, 0.741176, 0.12549, 1 )
custom_colors/font_outline_modulate = Color( 0.133333, 0.454902, 0.168627, 1 )
text = "Renown X Unlocked"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave_label" type="Label" parent="win_text"]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -85.5
margin_top = 361.6
margin_right = 85.5
margin_bottom = 379.6
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Press any button to leave"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="win_text"]

[connection signal="tween_completed" from="win_text/Tween" to="." method="_on_Tween_tween_completed"]
